syntax = "proto3";
package main;
option go_package="/mongodbtest";


service UserService{
    rpc CreateUser(CreateRequest) returns (CreateResponse);
    rpc ReadUser(ReadRequest) returns (ReadResponse);
    rpc UpdateUser(UpdateRequest) returns (UpdateResponse);
    rpc DeleteUser(DeleteRequest) returns (DeleteResponse);
    rpc ListUser(ListRequest) returns (ListResponse);
}

message User{
    string id=1;
    string name=2;
    string email=3;
    string password=4;
}

message CreateRequest{
    User user=1;
}
message CreateResponse{
    User user=1;
}

message ReadRequest{
    string id=1;
}
message ReadResponse{
    User User=1;
}

message UpdateRequest{
    User user=1;
}
message UpdateResponse{
    User user=1;
}

message DeleteRequest{
    string id=1;
}
message DeleteResponse{
    User user=1;
}

message ListRequest{}

message ListResponse{
    User user=1;
}

